# python-project-52

./: .env  .gitignore  Makefile  README.md  build.sh  pyproject.toml  ruff.toml  sonar-project.properties  uv.loc
.github/workflows/: python-ci.yml
core/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
core/fixtures/: statuses.json  users.json
core/migrations/: 0001_initial.py  0002_task.py  0003_label_created_at_status_created_at.py
core/templates/core/: home.html  label_confirm_delete.html  label_form.html  label_list.html  login.html  status_confirm_delete.html  status_form.html  status_list.html  task_confirm_delete.html  task_detail.html  task_form.html  task_list.html  user_confirm_delete.html  user_form.html  user_list.html
task_manager/: settings.py  urls.py
