[project]
name = "hexlet-code"
version = "0.1.0"
description = "Hexlet Django project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.0",
    "gunicorn>=25.0.0",
    "python-dotenv>=1.2.0",
    "psycopg2-binary>=2.9.0",
    "dj-database-url>=3.0.0",
    "django-bootstrap5>=22.3.0",
    "whitenoise==6.4.0",
    "rollbar>=1.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
